opam-version: "2.0"
maintainer:   "patrick@sirref.org"
authors:      ["Patrick Ferris"]
license:      "ISC"
homepage:     "https://github.com/patricoferris/ocaml-search"
bug-reports:  "https://github.com/patricoferris/ocaml-search/issues"
dev-repo:     "git+https://github.com/patricoferris/ocaml-search.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"    {>= "2.9.0"}
  "mdx"     {with-test}
]
synopsis: "Simple, in-memory search library in pure OCaml"